--- a/ts/package.json
+++ b/ts/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "date-fns": "^3.0.6",
+    "lodash": "^4.17.21"
   }
 }
